Add an update example
